--- a/index.html
+++ b/index.html
@@ -46,6 +46,9 @@
       .navbar-nav .nav-item .nav-link.active {
         background-color: #3c5a75;
       }
+      .text-justify{
+        text-align:justify;
+      }
     </style>
   </head>
   <body>
@@ -154,7 +157,7 @@
             <div
               class="bg-white px-lg-4 px-md-4 px-sm-3 py-lg-3 py-md-3 py-sm-2 p-2"
             >
-              <p class="lh-base fs-6">
+              <p class="lh-base fs-6 text-justify">
                 Lorem, ipsum dolor sit amet consectetur adipisicing elit.
                 Explicabo cumque quasi pariatur voluptates rem provident alias
                 quisquam neque temporibus, eligendi quos, quod sed aspernatur
@@ -170,15 +173,15 @@
               </div>
               <!--ends coffee-banner-img-->
 
-              <p class="lh-base fs-6">
+              <p class="lh-base fs-6 text-justify">
                 Lorem, ipsum dolor sit amet consectetur adipisicing elit.
               </p>
-              <p class="lh-base fs-6">
+              <p class="lh-base fs-6 text-justify">
                 In adipisicing elit. Explicabo cumque quasi pariatur voluptates
                 rem provident alias quisquam neque temporibus, eligendi quos,
                 quod sed aspernatur nobis dolorum accusantium ipsam vitae enim!
               </p>
-              <p class="lh-base fs-6">
+              <p class="lh-base fs-6 text-justify">
                 Aipsum dolor sit amet consectetur adipisicing elit. Explicabo
                 cumque quasi pariatur voluptates rem provident alias quisquam
                 neque temporibus, eligendi quos, quod sed aspernatur nobis
@@ -189,13 +192,13 @@
               <h2 class="text-uppercase fs-3 mb-3">
                 Brewing the Perfect Cup of Coffee
               </h2>
-              <p class="lh-base fs-6">
+              <p class="lh-base fs-6 text-justify">
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis
                 illum sed porro rerum alias vero pariatur quas veniam voluptatum
                 consectetur corporis fuga non soluta animi velit, aut, natus
                 quasi excepturi?
               </p>
-              <p class="lh-base fs-6">
+              <p class="lh-base fs-6 text-justify">
                 Dolor sit amet consectetur adipisicing elit. Explicabo cumque
                 quasi pariatur voluptates rem provident alias quisquam neque
                 temporibus, eligendi quos, quod sed aspernatur nobis dolorum
@@ -235,7 +238,7 @@
               class="bg-white px-lg-4 px-md-4 px-sm-3 py-lg-3 py-md-3 py-sm-2 p-2 mt-3"
             >
               <h2 class="text-uppercase fs-3 mb-3">what we do</h2>
-              <p class="lh-base fs-6">
+              <p class="lh-base fs-6 text-justify">
                 we are a website that is dedicated to the art of home brew
                 coffee. we really hope you enjoy your stay here.
               </p>
