--- a/about.html
+++ b/about.html
@@ -53,6 +53,9 @@
         height: 5rem;
         width: 5.5rem;
       }
+      .text-justify{
+        text-align:justify;
+      }
     </style>
   </head>
   <body>
@@ -170,7 +173,7 @@
               </div>
               <!--ends about-banner-img-->
 
-              <p class="lh-base fs-6">
+              <p class="lh-base fs-6 text-justify">
                 Lorem ipsum dolor sit amet consectetur adipisicing elit.
                 Delectus tempora, veniam exercitationem pariatur cupiditate
                 praesentium! Dolor asperiores reprehenderit obcaecati nobis
@@ -181,7 +184,7 @@
                 we <span class="text-uppercase">love</span> a good cup of
                 coffee!
               </h2>
-              <p class="lh-base fs-6">
+              <p class="lh-base fs-6 text-justify">
                 In adipisicing elit. Explicabo cumque quasi pariatur voluptates
                 rem provident alias quisquam neque temporibus, eligendi quos,
                 quod sed aspernatur nobis dolorum accusantium ipsam vitae enim!
@@ -195,7 +198,7 @@
                 <li>Mocha</li>
                 <li>Affogata</li>
               </ul>
-              <p class="lh-base fs-6">
+              <p class="lh-base fs-6 text-justify">
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis
                 illum sed porro rerum alias vero pariatur quas veniam voluptatum
                 consectetur corporis fuga
@@ -203,13 +206,13 @@
 
               <h2 class="text-capitalize fs-3 mb-3">our company promise</h2>
 
-              <p class="lh-base fs-6">
+              <p class="lh-base fs-6 text-justify">
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis
                 illum sed porro rerum alias vero pariatur quas veniam voluptatum
                 consectetur corporis fuga non soluta animi velit, aut, natus
                 quasi excepturi?
               </p>
-              <p class="lh-base fs-6">
+              <p class="lh-base fs-6 text-justify">
                 Dolor sit amet consectetur adipisicing elit. Explicabo cumque
                 quasi pariatur voluptates rem provident alias quisquam neque
                 temporibus, eligendi quos, quod sed aspernatur nobis dolorum
@@ -234,7 +237,7 @@
 
                 <!--starts-small-inner-col-->
                 <div class="col-lg-10 col-md-9 col-sm-10 col-12">
-                  <p class="lh-lg-4 fs-6">
+                  <p class="lh-lg-4 fs-6 text-justify">
                     Lorem, ipsum dolor sit amet consectetur adipisicing elit.
                     Explicabo cumque quasi pariatur voluptates rem provident
                     alias quisquam neque temporibus, eligendi quos, quod sed
@@ -243,7 +246,7 @@
                 </div>
                 <!--ends-small-inner-col-->
 
-                <p class="lh-lg-4 fs-6">
+                <p class="lh-lg-4 fs-6 text-justify">
                   Lorem, ipsum dolor sit amet consectetur adipisicing elit.
                   Explicabo cumque quasi pariatur voluptates rem provident alias
                   quisquam neque temporibus, eligendi quos, quod sed aspernatur
@@ -285,7 +288,7 @@
               class="bg-white px-lg-4 px-md-4 px-sm-3 py-lg-3 py-md-3 py-sm-2 p-2 mt-3"
             >
               <h2 class="text-uppercase fs-3 mb-3">what we do</h2>
-              <p class="lh-base fs-6">
+              <p class="lh-base fs-6 text-justify">
                 we are a website that is dedicated to the art of home brew
                 coffee. we really hope you enjoy your stay here.
               </p>
