--- a/blog.html
+++ b/blog.html
@@ -49,6 +49,9 @@
       .blog-banner2 img {
         max-height: 50vh;
       }
+      .text-justify{
+        text-align:justify;
+      }
     </style>
   </head>
   <body>
@@ -164,7 +167,7 @@
                   src="./images/blogpost-3.webp"
                   class="img-fluid mb-3 w-100"
                 />
-                <p class="lh-base fs-6">
+                <p class="lh-base fs-6 text-justify">
                   Lorem ipsum dolor sit amet consectetur adipisicing elit.
                   Delectus tempora, veniam exercitationem pariatur cupiditate
                   praesentium! Dolor asperiores reprehenderit obcaecati nobis
@@ -176,11 +179,11 @@
                   how to make a great cup of coffee at home!
                 </h2>
   
-                <p class="lh-base fs-6">
+                <p class="lh-base fs-6 text-justify">
                   Lorem ipsum dolor sit amet consectetur adipisicing elit.
                 </p>
   
-                <p class="lh-base fs-6">
+                <p class="lh-base fs-6 text-justify">
                   Lorem, ipsum dolor sit amet consectetur adipisicing elit.
                   Placeat aspernatur iste nisi autem hic dolore culpa dolorem quo
                   ratione, quod delectus, quam adipisci soluta numquam optio,
@@ -191,14 +194,14 @@
                   Making coffe at home easy......
                 </h2>
   
-                <p class="lh-base fs-6">
+                <p class="lh-base fs-6 text-justify">
                   Aenean, ipsum dolor sit amet consectetur adipisicing elit.
                   Placeat aspernatur iste nisi autem hic dolore culpa dolorem quo
                   ratione, quod delectus, quam adipisci soluta numquam optio,
                   magni vitae amet voluptate.
                 </p>
   
-                <p class="lh-base fs-6">
+                <p class="lh-base fs-6 text-justify">
                   Lorem ipsum dolor sit amet consectetur adipisicing elit.
                   Obcaecati possimus in harum nihil omnis expedita ipsa, quaerat
                   earum eligendi excepturi perspiciatis, voluptatum error
@@ -216,13 +219,13 @@
                   src="./images/making-coffee.png"
                   class="img-fluid mb-3 w-100"
                 />
-                <p class="lh-base fs-6">
+                <p class="lh-base fs-6 text-justify">
                   Adipisicing elit. Obcaecati possimus in harum nihil omnis
                   expedita ipsa, quaerat earum eligendi excepturi perspiciatis,
                   voluptatum error consequatur. Sint ratione aliquid consequatur
                   inventore incidunt.
                 </p>
-                <p class="lh-base fs-6">
+                <p class="lh-base fs-6 text-justify">
                   Lorem ipsum adipisicing elit. Obcaecati possimus in harum nihil
                   omnis expedita ipsa, quaerat earum eligendi excepturi
                   perspiciatis, voluptatum error consequatur. Sint ratione aliquid
@@ -287,7 +290,7 @@
               class="bg-white px-lg-4 px-md-4 px-sm-3 py-lg-3 py-md-3 py-sm-2 p-2 mt-3"
             >
               <h2 class="text-uppercase fs-3 mb-3">what we do</h2>
-              <p class="lh-base fs-6">
+              <p class="lh-base fs-6 text-justify">
                 we are a website that is dedicated to the art of home brew
                 coffee. we really hope you enjoy your stay here.
               </p>
