--- a/posts.html
+++ b/posts.html
@@ -49,6 +49,9 @@
       .posts-banner img {
         max-height: 50vh;
       }
+      .text-justify{
+        text-align:justify;
+      }
     </style>
   </head>
   <body>
@@ -169,7 +172,7 @@
                   7 different types of coffee!
                 </h2>
   
-                <p class="lh-base fs-6">
+                <p class="lh-base fs-6 text-justify">
                   Lorem ipsum dolor sit amet consectetur adipisicing elit.
                   Delectus tempora, veniam exercitationem pariatur cupiditate
                   praesentium! Dolor asperiores reprehenderit obcaecati nobis
@@ -195,7 +198,7 @@
                   what's the best coffee machine!
                 </h2>
   
-                <p class="lh-base fs-6">
+                <p class="lh-base fs-6 text-justify">
                   Lorem ipsum dolor sit amet consectetur adipisicing elit.
                   Delectus tempora, veniam exercitationem pariatur cupiditate
                   praesentium! Dolor asperiores reprehenderit obcaecati nobis
@@ -224,7 +227,7 @@
                   the way we maked iced coffee
                 </h2>
   
-                <p class="lh-base fs-6">
+                <p class="lh-base fs-6 text-justify">
                   Lorem ipsum dolor sit amet consectetur adipisicing elit.
                   Delectus tempora, veniam exercitationem pariatur cupiditate
                   praesentium! Dolor asperiores reprehenderit obcaecati nobis
@@ -251,7 +254,7 @@
                   what you need to know about nespresso
                 </h2>
   
-                <p class="lh-base fs-6">
+                <p class="lh-base fs-6 text-justify">
                   Lorem ipsum dolor sit amet consectetur adipisicing elit.
                   Delectus tempora, veniam exercitationem pariatur cupiditate
                   praesentium! Dolor asperiores reprehenderit obcaecati nobis
@@ -317,7 +320,7 @@
               class="bg-white px-lg-4 px-md-4 px-sm-3 py-lg-3 py-md-3 py-sm-2 p-2 mt-3"
             >
               <h2 class="text-uppercase fs-3 mb-3">what we do</h2>
-              <p class="lh-base fs-6">
+              <p class="lh-base fs-6 text-justify">
                 we are a website that is dedicated to the art of home brew
                 coffee. we really hope you enjoy your stay here.
               </p>
