--- a/contact.html
+++ b/contact.html
@@ -49,6 +49,9 @@
       .contact-banner img {
         max-height: 50vh;
       }
+      .text-justify{
+        text-align:justify;
+      }
     </style>
   </head>
   <body>
@@ -167,7 +170,7 @@
               </div>
               <!--ends coffee-banner-img-->
 
-              <p class="lh-base fs-6">
+              <p class="lh-base fs-6 text-justify">
                 Lorem ipsum dolor sit amet consectetur adipisicing elit.
                 Delectus tempora, veniam exercitationem pariatur cupiditate
                 praesentium! Dolor asperiores reprehenderit obcaecati nobis
@@ -177,7 +180,7 @@
 
               <h2 class="text-uppercase fs-3 mb-3">get a question?</h2>
 
-              <p class="lh-base fs-6">
+              <p class="lh-base fs-6 text-justify">
                 if you need to get in contact with us for
                 <span class="text-uppercase">any reason</span> please just fill
                 out the form below and we will get back to u as soon as
@@ -245,7 +248,7 @@
               class="bg-white px-lg-4 px-md-4 px-sm-3 py-lg-3 py-md-3 py-sm-2 p-2 mt-3"
             >
               <h2 class="text-uppercase fs-3 mb-3">what we do</h2>
-              <p class="lh-base fs-6">
+              <p class="lh-base fs-6 text-justify">
                 we are a website that is dedicated to the art of home brew
                 coffee. we really hope you enjoy your stay here.
               </p>
